base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rhdh
  namespace: ${RHDH_NAMESPACE}
  labels:
    app.kubernetes.io/instance: rhdh
spec:
  ports:
    - name: http-backend
      protocol: TCP
      port: 7007
      targetPort: backend
    - name: http-metrics
      protocol: TCP
      port: 9464
      targetPort: 9464
    - name: road-core
      protocol: TCP
      port: 8080
  type: ClusterIP
  sessionAffinity: None
  selector:
    app.kubernetes.io/instance: rhdh
